--- a/_posts/2015-04-25-workshop.markdown
+++ b/_posts/2015-04-25-workshop.markdown
@@ -2,11 +2,13 @@
 title:  "The hero with a thousand faces"
 subtitle: "Character creation"
 author: "Raja"
-avatar: "img/authors/raja.png"
+avatar: "img/authors/raja.jpeg"
 image: "img/f.jpg"
 date:   2016-11-23 12:12:12
 ---
 
 # The Hero with a thousand faces
+_Introduction_
 
-### Aliquam suscipit.
+What’s the best way to go about creating a character? And how do you establish a relationship between your character, his or her dramatic choices, and the story you’re telling? How do you determine whether your character will drive a car, or ride a bicycle, or take the bus or just walk, and what kind of paintings or posters hang in his/her house or apartment? Famous screenplay writers and doctors say “Before you can put one word down on paper, you must know your character.” Why? Disclaimer: Before you start reading, I would like to inform you that the answers to the above questions are all opinionated. It may or may not correlate with your ideology as the below mentioned is primarily based on personal experiences influenced by storytellers and screenplay consultants whom I idolize.
+
