--- a/_posts/2015-04-25-workshop.markdown
+++ b/_posts/2015-04-25-workshop.markdown
@@ -13,3 +13,9 @@ _Introduction_
 What's the best way to go about creating a character? And how do you establish a relationship between your character, his or her dramatic choices, and the story you're telling? How do you determine whether your character will drive a car, or ride a bicycle, or take the bus or just walk, and what kind of paintings or posters hang in his/her house or apartment? Famous screenplay writers and doctors say "Before you can put one word down on paper, you must know your character." Why? Disclaimer: Before you start reading, I would like to inform you that the answers to the above questions are all opinionated. It may or may not correlate with your ideology as the below mentioned is primarily based on personal experiences influenced by storytellers and screenplay consultants whom I idolize.
 ![daenerys]({{ site.url }}/img/post1/01.jpg){:class="img-responsive"}
 
+_What is Character in Storytelling?_
+
+Character is an essential part of the story and is always tributary to the plot. Aristotle weighed each side and concluded that story is primary, character secondary. In a screenplay, the story always moves forward, from beginning to end, whether in a linear or nonlinear fashion. The way you drive your story forward is by focusing on the actions of the character and the dramatic choices he or she makes during the narrative story line. In filmmaking there is a common metaphor - Show don't tell. This is applicable for characters too. So what is character? Action is character; a person is what he does, not what he says. In fact, characters with lucid self-knowledge, those reciting self-explanatory dialogue meant to convince us that they are who they say they are, are not only boring but phony. Because we're telling a story in pictures, we must show how the character acts and reacts to the incidents and events that he/she confronts and overcomes (or doesn't overcome) during the story line.
+![rashomon]({{ site.url }}/img/post1/02.jpg){:class="img-responsive"}
+
+
