--- a/_posts/2015-04-25-workshop.markdown
+++ b/_posts/2015-04-25-workshop.markdown
@@ -18,4 +18,7 @@ _What is Character in Storytelling?_
 Character is an essential part of the story and is always tributary to the plot. Aristotle weighed each side and concluded that story is primary, character secondary. In a screenplay, the story always moves forward, from beginning to end, whether in a linear or nonlinear fashion. The way you drive your story forward is by focusing on the actions of the character and the dramatic choices he or she makes during the narrative story line. In filmmaking there is a common metaphor - Show don't tell. This is applicable for characters too. So what is character? Action is character; a person is what he does, not what he says. In fact, characters with lucid self-knowledge, those reciting self-explanatory dialogue meant to convince us that they are who they say they are, are not only boring but phony. Because we're telling a story in pictures, we must show how the character acts and reacts to the incidents and events that he/she confronts and overcomes (or doesn't overcome) during the story line.
 ![rashomon]({{ site.url }}/img/post1/02.jpg){:class="img-responsive"}
 
+_The Main Character_
+There are two ways to approach writing your screenplay: One is to create an idea, then create your characters and "pour" your characters into the action. The second way is to create a character and then let the action, the story, emerge out of character. To understand the importance of the character, it is vital to explore the second type of stories. Indian Cinema is predominantly based on Character driven stories, whether one agrees or not. This approach to screenplay is by creating a character, then letting a need, an action, and, ultimately, a story emerge out of that character. Frequently a story is about what distinguishes the main character from the other characters. We are famous for our stories about a larger-than-life character that saves the day for millions of his/her people. He/she is the main character. If your story is about three guys against the systematic approach of education in their institute, which one of the three is the main character? You have to know that. Is it Rancho, Raju or Farhan? Or is it all of them? If you aren't sure, just ask yourself: Who is this story about?
+
 
