--- a/_posts/2015-04-25-workshop.markdown
+++ b/_posts/2015-04-25-workshop.markdown
@@ -20,5 +20,22 @@ Character is an essential part of the story and is always tributary to the plot.
 
 _The Main Character_
 There are two ways to approach writing your screenplay: One is to create an idea, then create your characters and "pour" your characters into the action. The second way is to create a character and then let the action, the story, emerge out of character. To understand the importance of the character, it is vital to explore the second type of stories. Indian Cinema is predominantly based on Character driven stories, whether one agrees or not. This approach to screenplay is by creating a character, then letting a need, an action, and, ultimately, a story emerge out of that character. Frequently a story is about what distinguishes the main character from the other characters. We are famous for our stories about a larger-than-life character that saves the day for millions of his/her people. He/she is the main character. If your story is about three guys against the systematic approach of education in their institute, which one of the three is the main character? You have to know that. Is it Rancho, Raju or Farhan? Or is it all of them? If you aren't sure, just ask yourself: Who is this story about?
+![idiots]({{ site.url }}/img/post1/03.jpg){:class="img-responsive"}
+
+_Creating Characters_
+Characters are not human beings. We relate to characters as if they were real, but they're superior to reality. Their aspects are designed to be clear and knowable; whereas our fellow humans are difficult to understand, if not enigmatic. We know characters better than we know our friends because a character is eternal and unchanging, while people shift - just when we think we understand them, we don't. Creating a character is a process, and until you've done it, until you've experienced it, you're more than likely to stumble around awkwardly like a blind man in a fog complaining about how things aren't where they used to be. Writers create characters in a variety of different ways. Joseph Campbell reflects in The Power of Myth that in mythic terms, the first part of any journey of initiation must deal with the death of the old self and the resurrection of the new. Campbell says that the hero, or heroic figure, "moves not into outer space but into inward space, to the place from which all being comes, into the consciousness that is the source of all things, the kingdom of heaven within. The images are outward, but their reflection is inward."
+![Ravan]({{ site.url }}/img/post1/04.jpg){:class="img-responsive"}
+
+There are several ways to approach creating your characters and all of them are valid, but you must choose the best way for you. The method outlined below gives you the opportunity of choosing what you want to use, or not to use, in developing your characters. Establish your main character. Separate the components of his/her life into two basic categories: interior and exterior. The interior life of your character takes place from birth up until the time your story begins - a.k.a. Character Biography. It is a process that forms character. The exterior life of your character takes place from the moment your film begins to the conclusion of the story - a.k.a. Characterization. It is a process that reveals character. To repeat: Characterization is the sum of all the observable qualities, a combination that makes the character unique: physical appearance coupled with mannerisms, style of speech and gesture, sexuality, age, IQ, occupation, personality, attitudes, values, where he lives, how he lives. Character Biography waits behind this mask. Despite his characterization, at heart who is this person? Is he/she loyal or disloyal? Is he/she honest or a liar? Is he/she loving or cruel? Is he/she courageous or cowardly? Is he/she generous or selfish? Is he/she willful or weak? What is his History?
+![Walt]({{ site.url }}/img/post1/05.jpg){:class="img-responsive"}
+
+_Believable and Influential Characters_
+The purpose of character is to bring to the story the qualities of characterization necessary to convincingly act out choices. Put simply, a character must be credible: young enough or old enough, strong or weak, worldly or naive, educated or ignorant, generous or selfish, witty or dull, in the right proportions. Each must bring to the story the combination of qualities that allows an audience to believe that the character could and would do what he does. In a successful movie, we burrow into a character to discover his aspects, his potential, then create an event geared to his unique nature. For each protagonist it's different - for one perhaps finding his lost daughter, for another losing his dear daughter - but we design the event to fit the character, the precise happening needed to send him on a quest that reaches the limits of his being.
+![Thalapathy]({{ site.url }}/img/post1/06.jpg){:class="img-responsive"}
+
+_Conclusion_
+If you want to write a screenplay, decide who you are writing about. As an exercise, choose a character and write a character biography. Just throw down thoughts, words, or ideas. Don't worry about grammar and punctuation. Write in fragments. You may want to start from birth but you don't have to follow your character's life in a linear form. Skip around if you have to; let your creative consciousness dictate the flow of character. Break your character's life down into the first ten years, the second ten years, the third ten years, and beyond. Write about five to ten pages freely about whatever that comes to mind, and if you choose, write more. I usually write about ten pages, starting with my character's parents on both sides, and then I'll even use past lives and astrology to get further insight into my character's thought process. After you've completed the character biography, think about the characterization. Focus on the relationships that occur during the screenplay. Know your character. The end result of all your work and research and preparation and thinking time will be characters who are authentic and believable, real people in real situations.
+
+_Peace._
 
 
